# django-log-formatter-ecs

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tests.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: test.yml
django_log_formatter_ecs/: __init__.py
tests/: test_django_log_formatter.py
