[tool.black]
line-length = 100

[tool.poetry]
name = "django-log-formatter-ecs"
version = "0.0.7"
description = "Formats Django logs in ECS format."
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "django_log_formatter_ecs" }
]

[tool.poetry.dependencies]
django = "^4.2.15"
django-ipware = "^7.0.0"
kubi-ecs-logger = "^0.1.2"
python = ">=3.8,<4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
